<resources>
    <string name="app_name">MyProfile</string>
    <string name="splashText">Hii...</string>
    <string name="name">Dino Priyano</string>
    <string name="email">dinopriyano@gmail.com</string>
    <string name="desc">Android and Desktop Developer</string>
    <string name="close">Close Apps</string>
    <string name="phone">(+62) 896 6101 1050</string>
    <string name="address">Centex Street, Ciracas, East Jakarta</string>
    <string name="dob">03-03-2003</string>
    <string name="keterangan1">Making multi window design and data passing between activities</string>
    <string name="keterangan2">Designing and encoding program flow in a mobile application</string>
    <string name="keterangan3">Making an application by applying user input processing techniques</string>
    <string name="keterangan4">Making mobile applications with advanced application design techniques</string>
    <string name="keterangan5">Making a mobile application by implementing the SQLite database</string>
    <string name="pelajaran">Project Target for \nThis Semester</string>
    <string name="see_portfolio">My Portfolio</string>
    <string name="detail_profile">Profile Detail</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name_input">Name</string>
    <string name="phone_input">Phone</string>
    <string name="email_input">Email</string>
    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">Face Recognition</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>

    <array name="comments">
        <item>Teman</item>
        <item>Biasa saja</item>
        <item>Bagaimana ya?</item>
        <item>No comment</item>
    </array>
</resources>